<?xml version="1.0" encoding="utf-8"?>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".RegisterFragment"
    >

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent" >
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical"
            android:gravity="center"
            >

            <TextView
                android:id="@+id/registertitle"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/registerTitle"
                android:textSize="30sp"
                android:layout_margin="30dp"
                android:gravity="center"

                />

            <EditText
                android:id="@+id/userName"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:ems="10"
                android:hint="@string/userName"
                android:inputType="textPersonName"
                android:layout_margin="20dp"
                android:autofillHints="username"
                />

            <EditText
                android:id="@+id/nombre"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:ems="10"
                android:inputType="textPersonName"
                android:hint="@string/nombre"
                android:layout_margin="20dp"
                android:autofillHints="name"
                />

            <EditText
                android:id="@+id/apellido"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:ems="10"
                android:inputType="textPersonName"
                android:hint="@string/apellido"
                android:layout_margin="20dp"/>

            <EditText
                android:id="@+id/telefono"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:ems="10"
                android:inputType="textPersonName"
                android:hint="@string/telefono"
                android:autofillHints="phone"
                android:layout_margin="20dp"/>

            <EditText
                android:id="@+id/correo"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:ems="10"
                android:inputType="textPersonName"
                android:hint="@string/correo"
                android:autofillHints="emailAddress"
                android:layout_margin="20dp"/>

            <EditText
                android:id="@+id/fecha"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:ems="10"
                android:hint="@string/fecha"
                android:layout_margin="20dp"
                android:inputType="datetime" />

            <RadioGroup
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical">

                <TextView
                    android:id="@+id/textView2"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/sexo"
                    android:gravity="start"
                    android:layout_margin="20dp"
                    android:textSize="15sp"
                    />

                <RadioButton android:id="@+id/hombre"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/radioMale"
                    android:checked="true"
                    />
                <RadioButton android:id="@+id/mujer"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/radioFemale"
                    />
            </RadioGroup>

            <EditText
                android:id="@+id/pais"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:ems="10"
                android:inputType="textPersonName"
                android:hint="@string/pais"
                android:layout_margin="20dp"
                />

            <EditText
                android:id="@+id/provincia"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:ems="10"
                android:inputType="textPersonName"
                android:layout_margin="20dp"
                android:hint="@string/provincia" />

            <EditText
                android:id="@+id/direccion"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:ems="10"
                android:layout_margin="20dp"
                android:inputType="textPersonName"
                android:hint="@string/direccion" />

            <EditText
                android:id="@+id/password"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:ems="10"
                android:layout_margin="20dp"
                android:inputType="textPassword"
                android:hint="@string/registerPassword" />

            <EditText
                android:id="@+id/passwordConfirm"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:ems="10"
                android:layout_margin="20dp"
                android:inputType="textPassword"
                android:hint="@string/registerPasswordConfirm" />

            <Button
                android:id="@+id/CrearBtn"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_margin="10dp"
                android:text="@string/registerBtnAction" />

            <Button
                android:id="@+id/backRegisterBtn"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_margin="10dp"
                android:text="@string/backBtn" />

        </LinearLayout>
    </ScrollView>
</FrameLayout>