<?xml version="1.0" encoding="utf-8"?>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/profile"
    tools:context=".ProfileFragment">

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent" >
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:gravity="center"
            >

            <ImageView
                android:id="@+id/profileImg"
                android:layout_width="200dp"
                android:layout_height="200dp"
                android:src="@drawable/perfil" />

            <TextView
                android:id="@+id/profileTxt"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/profileTitulo"
                android:textSize="30sp"
                android:layout_margin="30dp"
                android:gravity="center"
                android:textColor="@color/white"

                />

            <EditText
                android:id="@+id/profileNombre"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:ems="10"
                android:hint="@string/hintNombre"
                android:inputType="textPersonName"
                android:layout_margin="20dp"
                android:autofillHints="Nombre"
                android:background="@drawable/input_design"
                android:textAlignment="center"
                />

            <EditText
                android:id="@+id/profileApellido"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:ems="10"
                android:inputType="textPersonName"
                android:hint="@string/hintApellido"
                android:layout_margin="20dp"
                android:autofillHints="name"
                android:background="@drawable/input_design"
                android:textAlignment="center"
                />



            <RadioGroup
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical">

                <TextView
                    android:id="@+id/profileRadioBtn"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/sexo"
                    android:textColor="@color/white"
                    android:gravity="start"
                    android:layout_margin="20dp"
                    android:textSize="20sp"
                    />

                <RadioButton android:id="@+id/profileRadioSexo1"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:textColor="@color/white"
                    android:text="@string/radioMale"
                    android:checked="true"
                    />
                <RadioButton android:id="@+id/profileRadioSexo2"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:textColor="@color/white"
                    android:text="@string/radioFemale"
                    />
            </RadioGroup>

            <Button
                android:id="@+id/editActionProfile"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_margin="10dp"
                android:background="@drawable/action_btn"
                android:textColor="@color/white"
                android:text="@string/Editar" />

            <Button
                android:id="@+id/backProfileBtn"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:background="@drawable/cancel_btn"
                android:textColor="@color/white"
                android:layout_margin="10dp"
                android:text="@string/backBtn" />

        </LinearLayout>
    </ScrollView>
</FrameLayout>