<?xml version="1.0" encoding="utf-8"?>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MenuFragment"
    android:background="@drawable/menufondo"
    >

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_gravity="center"
        >
        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:orientation="vertical">

            <ImageView
                android:id="@+id/imageViewMenu"
                android:layout_width="200dp"
                android:layout_centerHorizontal="true"
                android:layout_height="200dp"

                android:src="@drawable/registro1" />

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:gravity="center"
                android:id="@+id/menuTxtId"
                android:layout_marginBottom="10dp"
                android:layout_marginTop="10dp"
                android:layout_marginRight="50dp"
                android:layout_marginLeft="50dp"
                android:layout_below="@id/imageViewMenu"
                android:text="@string/MenuTask"
                android:textColor="@color/white"
                android:textAlignment="center"
                android:textSize="30sp" />

            <androidx.recyclerview.widget.RecyclerView
                android:layout_width="match_parent"
                android:layout_height="350dp"
                android:id="@+id/taskRecycler"
                android:layout_below="@id/menuTxtId"
                android:background="@color/white"
                />

            <Button
                android:id="@+id/logOutBtnAction"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:background="@drawable/cancel_btn"
                android:layout_marginTop="20dp"
                android:layout_centerHorizontal="true"
                android:layout_below="@id/taskRecycler"
                android:textColor="@color/white"
                android:text="@string/logOut" />
            <com.google.android.material.floatingactionbutton.FloatingActionButton
                android:id="@+id/profile"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_centerHorizontal="true"
                android:layout_alignBottom="@id/taskRecycler"
                android:layout_alignEnd="@id/taskRecycler"
                android:src="@drawable/profile11"
                android:contentDescription="@string/plusDesc"
                android:layout_margin="16dp" />
            <com.google.android.material.floatingactionbutton.FloatingActionButton
                android:id="@+id/plus"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_centerHorizontal="true"

                android:layout_alignEnd="@id/taskRecycler"
                android:src="@drawable/plus1"
                android:layout_above="@+id/profile"
                android:contentDescription="@string/plusDesc"
                android:layout_margin="16dp" />

        </RelativeLayout>
    </ScrollView>

</FrameLayout>